--- a/api/api.csproj
+++ b/api/api.csproj
@@ -8,10 +8,12 @@
 
   <ItemGroup>
     <None Remove="DAL\" />
+    <None Remove="Models\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="DAL\" />
     <Folder Include="wwwroot\" />
+    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <Content Remove="wwwroot\" />
@@ -19,5 +21,8 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="wwwroot\index.html" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="MongoDB.Driver" Version="2.20.0" />
   </ItemGroup>
 </Project>
