--- a/api/api.csproj
+++ b/api/api.csproj
@@ -24,5 +24,6 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="MongoDB.Driver" Version="2.20.0" />
+    <PackageReference Include="AWSSDK.SecurityToken" Version="3.7.201.12" />
   </ItemGroup>
 </Project>
