--- a/api/api.csproj
+++ b/api/api.csproj
@@ -11,7 +11,6 @@
     <None Remove="Models\" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="DAL\" />
     <Folder Include="wwwroot\" />
     <Folder Include="Models\" />
   </ItemGroup>
@@ -24,6 +23,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="MongoDB.Driver" Version="2.20.0" />
-    <PackageReference Include="AWSSDK.SecurityToken" Version="3.7.201.12" />
+    <PackageReference Include="MongoDB.Driver.Core" Version="2.20.0" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.9.0" />
   </ItemGroup>
 </Project>
