--- a/api/Properties/launchSettings.json
+++ b/api/Properties/launchSettings.json
@@ -13,7 +13,7 @@
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "index.html",
-      "applicationUrl": "https://localhost:7217;http://localhost:5215",
+      "applicationUrl": "http://localhost:5215;https://localhost:7217",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
