Updated namespace from api -> API. Added unit test project.

--- a/API/Properties/launchSettings.json
+++ b/API/Properties/launchSettings.json
@@ -9,7 +9,7 @@
     }
   },
   "profiles": {
-    "api": {
+    "API": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "index.html",
